css changes/statboard changes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,12 +68,16 @@ body {
 
 h2 {
     font-family: sc_font;
-    color: aliceblue;
+    background: linear-gradient(to right, darkgray, aliceblue);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    /* color: aliceblue; */
     margin-top: 30px;
     clear: both;
     height: 66px;
     width: 262px;
     border-style: solid;
+    border-color: aliceblue;
     text-align: center;
 }
 
