--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,208 +1,208 @@
 @font-face {
-    font-family: sc_font;
-    src: url(../fonts/sc_font.ttf);
+  font-family: sc_font;
+  src: url(../fonts/sc_font.ttf);
 }
 
 @font-face {
-    font-family: orbitron_font;
-    src: url(../fonts/orbitron_font.otf);
+  font-family: orbitron_font;
+  src: url(../fonts/orbitron_font.otf);
 }
 
 body {
-    background-image: url(../images/arenaBackground.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
-    text-align: center;
-    font-size: 20px;
-    color: lime;
+  background-image: url(../images/arenaBackground.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  text-align: center;
+  font-size: 20px;
+  color: lime;
+}
+
+h2 {
+  font-family: sc_font;
+  background: linear-gradient(to right, ivory, grey);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  /* color: aliceblue; */
+  margin-top: 30px;
+  clear: both;
+  height: 66px;
+  width: 262px;
+  border-style: solid;
+  border-color: aliceblue;
+  border-width: 2px;
+  text-align: center;
+}
+
+img {
+  width: 256px;
 }
 
 .units {
-    float: left;
-    text-align: center;
-    border-style: solid;
-    border-width: 3px;
-    border-color: black;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    background-color:black;
-    color: white;
-    margin-right: 20px;
-    /*height: 408.275px;*/
+  float: left;
+  text-align: center;
+  border-style: solid;
+  border-width: 3px;
+  border-color: black;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  background-color: black;
+  color: white;
+  margin-right: 20px;
+  /*height: 408.275px;*/
 }
 
 /*StatBoards*/
 
 .allStatBoards {
-    background: black;
-    margin-top: 20px;
-    width: 262px;
-    border-style: solid;
-    border-color: black;
-    border-width: 2px;
-    font-family: orbitron_font;
-    padding: 10px;
-    letter-spacing: 1px;
+  background: black;
+  margin-top: 20px;
+  width: 262px;
+  border-style: solid;
+  border-color: black;
+  border-width: 2px;
+  font-family: orbitron_font;
+  padding: 10px;
+  letter-spacing: 1px;
 }
 
 .statBoard0 {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
 .statBoard1 {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
 .statBoard2 {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
 .statBoard3 {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
 .statBoard4 {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
 .statBoard5 {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
 .statBoard6 {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
 .statBoard7 {
-    margin-top: 20px;
-}
-
-h2 {
-    font-family: sc_font;
-    background: linear-gradient(to right, ivory, grey);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    /* color: aliceblue; */
-    margin-top: 30px;
-    clear: both;
-    height: 66px;
-    width: 262px;
-    border-style: solid;
-    border-color: aliceblue;
-    border-width: 2px;
-    text-align: center;
+  margin-top: 20px;
 }
 
 .energy {
-    color: purple;
+  color: purple;
 }
 
 .health {
-    color: lime;
+  color: lime;
 }
 
 .unitName {
-    color: lime;
-}
-
-img {
-    width: 256px;
+  color: lime;
 }
 
 /*Ghost abilities*/
 
 #ghostBasicAttack {
-    background-image: url(../images/terran/ghostAttack.gif);
-    float: left;
-    width: 64px;
-    height: 64px;
+  background-image: url(../images/terran/ghostAttack.gif);
+  float: left;
+  width: 64px;
+  height: 64px;
 }
 
 #ghostSpecial1 {
-    background-image: url(../images/terran/ghostSpecial1.png);
-    float: left;
-    width: 64px;
-    height: 64px;
+  background-image: url(../images/terran/ghostSpecial1.png);
+  float: left;
+  width: 64px;
+  height: 64px;
 }
 
 #ghostSpecial2 {
-    background-image: url(../images/terran/ghostSpecial2.jpg);
-    float: left;
-    width: 64px;
-    height: 64px;
+  background-image: url(../images/terran/ghostSpecial2.jpg);
+  float: left;
+  width: 64px;
+  height: 64px;
 }
 
 #ghostHeal {
-    background-image: url(../images/terran/ghostHeal.png);
-    float: left;
-    width: 64px;
-    height: 64px;
+  background-image: url(../images/terran/ghostHeal.png);
+  float: left;
+  width: 64px;
+  height: 64px;
 }
 
 /*Dark Templar abilities*/
 
 #darkTemplarBasicAttack {
-    background-image: url(../images/protoss/darkTemplarBasicAttack.gif);
-    float: left;
-    width: 64px;
-    height: 64px;
+  background-image: url(../images/protoss/darkTemplarBasicAttack.gif);
+  float: left;
+  width: 64px;
+  height: 64px;
 }
 
 #darkTemplarSpecial1 {
-    background-image: url(../images/protoss/darkTemplarSpecial1.jpg);
-    float: left;
-    width: 64px;
-    height: 64px;
+  background-image: url(../images/protoss/darkTemplarSpecial1.jpg);
+  float: left;
+  width: 64px;
+  height: 64px;
 }
 
 #darkTemplarSpecial2 {
-    background-image: url(../images/protoss/darkTemplarSpecial2.png);
-    float: left;
-    width: 64px;
-    height: 64px;
+  background-image: url(../images/protoss/darkTemplarSpecial2.png);
+  float: left;
+  width: 64px;
+  height: 64px;
 }
 
 #darkTemplarHeal {
-    background-image: url(../images/protoss/darkTemplarHeal.png);
-    float: left;
-    width: 64px;
-    height: 64px;
+  background-image: url(../images/protoss/darkTemplarHeal.png);
+  float: left;
+  width: 64px;
+  height: 64px;
 }
 
 /*Hydralisk abilities*/
 
 #hydraliskBasicAttack {
-    background-image: url(../images/zerg/hydraliskBasicAttack.gif);
-    float: left;
-    width: 64px;
-    height: 64px;
+  background-image: url(../images/zerg/hydraliskBasicAttack.gif);
+  float: left;
+  width: 64px;
+  height: 64px;
 }
 
 #hydraliskSpecial1 {
-    background-image: url(../images/zerg/hydraliskSpecial1.jpg);
-    float: left;
-    width: 64px;
-    height: 64px;
+  background-image: url(../images/zerg/hydraliskSpecial1.jpg);
+  float: left;
+  width: 64px;
+  height: 64px;
 }
 
 #hydraliskSpecial2 {
-    background-image: url(../images/zerg/hydraliskSpecial2.jpg);
-    float: left;
-    width: 64px;
-    height: 64px;
+  background-image: url(../images/zerg/hydraliskSpecial2.jpg);
+  float: left;
+  width: 64px;
+  height: 64px;
 }
 
 #hydraliskHeal {
-    background-image: url(../images/zerg/hydraliskHeal.png);
-    float: left;
-    width: 64px;
-    height: 64px;
+  background-image: url(../images/zerg/hydraliskHeal.png);
+  float: left;
+  width: 64px;
+  height: 64px;
 }
 
 /*Reset button*/
-#resetButton
-{
-    background-color: black;
-    border: none;
+#resetButton {
+  background-color: black;
+  border: none;
 }
